--- a/V1/index.html
+++ b/V1/index.html
@@ -5,6 +5,6 @@
         <title>GitHub Fun</title>
     </head>
     <body>
-        <!-- Stuff goes here -->
+        <!-- Hi Sean! -->
     </body>
 </html>
