--- a/V1/index.html
+++ b/V1/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
+<!--M1LO6 Demonstrate the use of basic HTML tags to create a simple Web page (HTML, this item should be specified once, describing how the file it is in meets this outcome)-->
 <html>
-    <head>
-        <meta charset="UTEF-8">
-        <title>GitHub Fun</title>
-    </head>
-    <body>
-        <!-- Hi Sean! -->
-    </body>
+
+<head>
+    <!--Kilroy's Pizza
+        Author: Ian Lorimer
+        Date: 04.30.2020
+        Filename: index.html
+        -->
+    <meta charset="utf-8" />
+    <meta name="keywords" content="Pizza, Capitol Hill, Food" />
+    <title>Kilroy's Pizza</title>
+    <link href="styles.css" rel="stylesheet" />
+    <!--M1LO8 Demonstrate the use of external style sheets (HTML, note the external style sheet must exist and contain CSS)-->
+    <link href="kp_layout.css" rel="stylesheet" />
+</head>
+
+<body>
+    <header>
+        <img src="Kilroys pizza image 4.JPG">
+    </header>
+    <h1>Kilroy's Pizza</h1>
+    <article>
+        <ol>
+            <li>Stuff</li>
+            <li>More stuff</li>
+            <li>lots of stuff</li>
+        </ol>
+    </article>
+    <footer>
+    </footer>
+</body>
+
 </html>
