--- a/V1/index.html
+++ b/V1/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         <!--M2LO6  Demonstrate a CSS id and a CSS class selector (CSS, specify 2 times, show a use of id and a use of class, see 2-9b Attribute selectors)-->
-        <img src="Kilroys_pizza_image_4.JPG" alt="Kilroy's Pizza" class="center">
+        <img src="Kilroys_pizza_image_4.jpg" alt="Kilroy's Pizza" class="center">
     </header>
     <footer>
         <!--M1LO10 Demonstrate the use of special characters from extended character sets (HTML, use entities, not cut-and-pasted unicode characters)-->
