--- a/V1/bread_menu.html
+++ b/V1/bread_menu.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <!--Kilroy's Pizza
+<html lang="en">
+
+<head>
+    <!--Kilroy's Pizza
             Author: Ian Lorimer
             Date: 05.01.2020
             Filename: bread_menu.html
             -->
-        <meta charset="utf-8" />
-        <meta name="keywords" content="Pizza, Capitol Hill, Food" />
-        <title>Kilroy's Pizza</title>
-        <link href="styles.css" rel="stylesheet" />
-        <!--M1LO8 Demonstrate the use of external style sheets (HTML, note the external style sheet must exist and contain CSS)-->
-        <link href="kp_layout.css" rel="stylesheet" />
-    </head>
-    <body>
-        <h1 id="Bread">Bread Menu</h1>
-<p>*Bread availability will change daily depending on time and demand, thank you!</p>
-    <h2>Baguettes</h2>
-       <dd>1 for $4 or 6 for $20</dd>
-    <h2>Small Loaves</h2>
-       <dd>1 for $7 or 2 for $12</dd>
-    <h2>Batards</h2>
-        <dd>1 for $10</dd>
-    <h2>Boules</h2>
+    <meta charset="utf-8" />
+    <meta name="keywords" content="Pizza, Capitol Hill, Food" />
+    <title>Kilroy's Pizza</title>
+    <link href="styles.css" rel="stylesheet" />
+    <!--M1LO8 Demonstrate the use of external style sheets (HTML, note the external style sheet must exist and contain CSS)-->
+    <link href="kp_layout.css" rel="stylesheet" />
+</head>
+
+<body>
+    <h1 id="Bread">Bread Menu</h1>
+    <dl>
+        <dt>*Bread availability will change daily depending on time and demand, thank you!</dt>
+        <dt>Baguettes</dt>
+        <dd>1 for $4 or 6 for $20</dd>
+
+        <dt>Small Loaves</dt>
         <dd>1 for $7 or 2 for $12</dd>
-    <h2>Foccacia</h2>
+
+        <dt>Batards</dt>
+        <dd>1 for $10</dd>
+
+        <dt>Boules</dt>
+        <dd>1 for $7 or 2 for $12</dd>
+
+        <dt>Foccacia</dt>
         <dd>Plain- E.V.O.O. and Salt for $13</dd>
         <dd>Rosemary- E.V.O.O., Fresh Rosemary and Salt for $16</dd>
         <dd>Tomato- E.V.O.O., Halved Cherry Tomatoes, Salt and Balsamic Glaze for $20</dd>
+    </dl>
+</body>
 
-    </body>
 </html>
