--- a/V1/pizza_menu.html
+++ b/V1/pizza_menu.html
@@ -28,8 +28,9 @@
         <dt>Pepperoni Pizza</dt>
         <dd>Pomodoro Sauce, Signature Pepperoni & Mozzarella Cheese Blend. Finished with Fresh Basil.
             N.Y.-$22 Small Pan-$17 Large Pan-$32</dd>
-
-        <dt>Signature Pizzas</dt>
+    </dl>
+    <h3 id="Signature">Signature Pizzas</h3>
+    <dl>
         <dt>Patata</dt>
         <dd>Pesto Sauce, Roasted Potatoes & Mozzarella Cheese Blend.
             N.Y.-$20 Small Pan-$15 Large Pan-$30</dd>
