--- a/V3/about.html
+++ b/V3/about.html
@@ -37,6 +37,12 @@
                 Bread Menu - Added a link to the pizza menu, and the navbar to all pages. This page is still under
                 construction.
         </p>
+        <p>
+                V3
+                On all the pages (excluding the homepage), I added a drop down menu for the pizza and bread menus.
+                Pizza Menu - I added a flexbox slideshow, edited an image, and played with the background image.
+                Bread Menu - Added images, added pizza menu at a glance (required table), added a border color and the gradient.
+        </p>
         <!--M1LO13 Demonstrate using 3 types of hyperlinks: site navigation, targeted location using ids, and external (HTML, this item should be specified 3 times, once on each type of link)-->
         <header>
                 <!--M1LO9 Demonstrate the use of inline images (HTML)-->
